[gd_scene load_steps=7 format=3 uid="uid://de538c62welpc"]

[ext_resource type="Texture2D" uid="uid://gqdtxl4r2dox" path="res://textures/SolAsteroidBeltHDRI.png" id="1_31hwd"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_gpni3"]
[ext_resource type="Script" path="res://scripts/reticle.gd" id="6_pof7r"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_hi0hg"]
panorama = ExtResource("1_31hwd")

[sub_resource type="Sky" id="Sky_f8kay"]
sky_material = SubResource("PanoramaSkyMaterial_hi0hg")

[sub_resource type="Environment" id="Environment_x4t8m"]
background_mode = 2
sky = SubResource("Sky_f8kay")

[node name="world" type="Node"]
script = ExtResource("1_gpni3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
offset_right = 1153.0
offset_bottom = 647.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP"
alignment = 1

[node name="Username" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Username"
alignment = 1

[node name="Scenery" type="Node3D" parent="."]

[node name="CSGBox3D3" type="CSGBox3D" parent="Scenery"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Scenery"]
transform = Transform3D(0.688355, 0.526168, -0.499315, 0, 0.688355, 0.725374, 0.725374, -0.499315, 0.473832, 0, 10, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Scenery"]
environment = SubResource("Environment_x4t8m")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Reticle" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_pof7r")

[node name="Label" type="Label" parent="HUD/Reticle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = ">   <"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/ship.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
